# internal/rest/controller/get_profile_by_username.go
@@ -9,6 +9,7 @@ import (
 	"github.com/netbill/profiles-svc/internal/rest/responses"
 	"github.com/netbill/profiles-svc/internal/rest/scope"
 	"github.com/netbill/restkit/problems"
+	"github.com/netbill/restkit/render"
 )
 
 const operationGetProfileByUsername = "get_profile_by_username"
@@ -22,11 +23,11 @@ func (c *Controller) GetProfileByUsername(w http.ResponseWriter, r *http.Request
 	switch {
 	case errors.Is(err, errx.ErrorProfileNotExists):
 		log.Info("profile not found")
-		c.responser.RenderErr(w, problems.NotFound("profile for user does not exist"))
+		render.ResponseError(w, problems.NotFound("profile for user does not exist"))
 	case err != nil:
 		log.WithError(err).Error("failed to get profile by username")
-		c.responser.RenderErr(w, problems.InternalError())
+		render.ResponseError(w, problems.InternalError())
 	default:
-		c.responser.Render(w, http.StatusOK, responses.Profile(res))
+		render.Response(w, http.StatusOK, responses.Profile(res))
 	}
 }
