# internal/rest/controller/update_my_profile.go
@@ -12,6 +12,7 @@ import (
 	"github.com/netbill/profiles-svc/internal/rest/responses"
 	"github.com/netbill/profiles-svc/internal/rest/scope"
 	"github.com/netbill/restkit/problems"
+	"github.com/netbill/restkit/render"
 )
 
 const operationUpdateMyProfile = "update_my_profile"
@@ -22,7 +23,7 @@ func (c *Controller) UpdateMyProfile(w http.ResponseWriter, r *http.Request) {
 	req, err := requests.UpdateProfile(r)
 	if err != nil {
 		log.WithError(err).Info("invalid request body")
-		c.responser.RenderErr(w, problems.BadRequest(err)...)
+		render.ResponseError(w, problems.BadRequest(err)...)
 
 		return
 	}
@@ -35,37 +36,37 @@ func (c *Controller) UpdateMyProfile(w http.ResponseWriter, r *http.Request) {
 	switch {
 	case errors.Is(err, errx.ErrorProfileNotExists):
 		log.WithError(err).Info("account not found by credentials")
-		c.responser.RenderErr(w, problems.NotFound("profile for user does not exist"))
+		render.ResponseError(w, problems.NotFound("profile for user does not exist"))
 	case errors.Is(err, errx.ErrorProfileAvatarKeyIsInvalid):
 		log.WithError(err).Info("avatar key is invalid")
-		c.responser.RenderErr(w, problems.BadRequest(validation.Errors{
+		render.ResponseError(w, problems.BadRequest(validation.Errors{
 			"avatar": fmt.Errorf("avatar key is invalid"),
 		})...)
 	case errors.Is(err, errx.ErrorNoContentUploaded):
 		log.WithError(err).Info("no content uploaded for avatar")
-		c.responser.RenderErr(w, problems.BadRequest(validation.Errors{
+		render.ResponseError(w, problems.BadRequest(validation.Errors{
 			"avatar": fmt.Errorf("no content uploaded for avatar"),
 		})...)
 	case errors.Is(err, errx.ErrorProfileAvatarContentIsExceedsMax):
 		log.WithError(err).Info("avatar content is exceeds max")
-		c.responser.RenderErr(w, problems.BadRequest(validation.Errors{
+		render.ResponseError(w, problems.BadRequest(validation.Errors{
 			"avatar": err,
 		})...)
 	case errors.Is(err, errx.ErrorProfileAvatarResolutionIsInvalid):
 		log.WithError(err).Info("avatar resolution is invalid")
-		c.responser.RenderErr(w, problems.BadRequest(validation.Errors{
+		render.ResponseError(w, problems.BadRequest(validation.Errors{
 			"avatar": err,
 		})...)
 	case errors.Is(err, errx.ErrorProfileAvatarFormatIsNotAllowed):
 		log.WithError(err).Info("avatar format is not allowed")
-		c.responser.RenderErr(w, problems.BadRequest(validation.Errors{
+		render.ResponseError(w, problems.BadRequest(validation.Errors{
 			"avatar": err,
 		})...)
 	case err != nil:
 		log.WithError(err).Error("failed to update profile")
-		c.responser.RenderErr(w, problems.InternalError())
+		render.ResponseError(w, problems.InternalError())
 	default:
 		log.Debug("profile updated")
-		c.responser.Render(w, http.StatusOK, responses.Profile(res))
+		render.Response(w, http.StatusOK, responses.Profile(res))
 	}
 }
