# internal/rest/controller/update_profile_official.go
@@ -9,6 +9,7 @@ import (
 	"github.com/netbill/profiles-svc/internal/rest/responses"
 	"github.com/netbill/profiles-svc/internal/rest/scope"
 	"github.com/netbill/restkit/problems"
+	"github.com/netbill/restkit/render"
 )
 
 const operationUpdateProfileOfficial = "update_profile_official"
@@ -19,7 +20,7 @@ func (c *Controller) UpdateProfileOfficial(w http.ResponseWriter, r *http.Reques
 	req, err := requests.UpdateProfileOfficial(r)
 	if err != nil {
 		log.WithError(err).Info("invalid update profile official request")
-		c.responser.RenderErr(w, problems.BadRequest(err)...)
+		render.ResponseError(w, problems.BadRequest(err)...)
 		return
 	}
 
@@ -27,11 +28,11 @@ func (c *Controller) UpdateProfileOfficial(w http.ResponseWriter, r *http.Reques
 	switch {
 	case errors.Is(err, errx.ErrorProfileNotExists):
 		log.Info("profile for user does not exist")
-		c.responser.RenderErr(w, problems.NotFound("profile for user does not exist"))
+		render.ResponseError(w, problems.NotFound("profile for user does not exist"))
 	case err != nil:
 		log.WithError(err).Error("failed to update profile official")
-		c.responser.RenderErr(w, problems.InternalError())
+		render.ResponseError(w, problems.InternalError())
 	default:
-		c.responser.Render(w, http.StatusOK, responses.Profile(res))
+		render.Response(w, http.StatusOK, responses.Profile(res))
 	}
 }
